--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 ---
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
+layout: single
+title: "About"
 author_profile: true
 ---
+<div>
+    My name is <strong>Siwei Wang</strong>. I grew up in Yichang, a city alongside the Yangtze River in Hubei province, central China. 
+    I got my bachelor degree from Energy and Power Engineering school in Xi'an Jiaotong University. 
+    Currently, I am a USC master student studying <strong>Computer Science</strong>.<br>
+    I am interested in <strong>Game development & Graphics</strong>.  
+</div>
